--- a/Makefile.Linux
+++ b/Makefile.Linux
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-Wall
 LIBS=-lGL -lGLEW `sdl-config --libs`
-OBJS=engine.o actor.o player.o
+OBJS=actor.o player.o gamestate.o gamestate_game.o
 
 all: castleinthedungeon
 	
